# MyRepo

./: .gitignore  README.md
CompAlgo/lab_01/: Makefile  fprocess.py  ftablegen.py  main.cpp  myio.hpp  ninterp.cpp  ninterp.hpp  sumup.py  tprocess.py
CompAlgo/lab_02/: ftablegen.py  main.py  out.txt
CompAlgo/lab_03/: Makefile  main.cpp  ninterp.cpp  ninterp.hpp
CompAlgo/lab_04/: in.txt  main.py
CompAlgo/lab_05/: dichotomy.py  gauss.py  integral.py  interpolation.py  main.py
CompAlgo/lab_06/: derivative.py  ftablegen.py  lab_06.7z  main.py  out.txt  Документ Microsoft Word.docx
ComputerGraphics/: readme.md
ComputerGraphics/lab_01/: geometry.cpp  geometry.h  graphicsview.cpp  graphicsview.h  lab_01.pro  main.cpp  mainwindow.cpp  mainwindow.h  mylib.cpp  mylib.h
ComputerGraphics/lab_01/styles/: fonts.qrc  (+1 more)
ComputerGraphics/lab_02/: figure.cpp  figure.h  graphicsview.cpp  graphicsview.h  lab_02.pro  main.cpp  mainwindow.cpp  mainwindow.h  mylib.cpp  mylib.h  rotationui.cpp  rotationui.h  scalingui.cpp  scalingui.h  styles.qrc  transferui.cpp  transferui.h
ComputerGraphics/lab_03/: canvas.cpp  canvas.h  colorpicker.cpp  colorpicker.h  lab_03.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
ComputerGraphics/lab_04/: canvas.cpp  canvas.h  colorbutton.cpp  drawalgo.cpp  drawalgo.h  geometry.cpp  geometry.h  handler.cpp  handler.h  lab_04.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  management.cpp  management.h
ComputerGraphics/lab_05/: canvas.cpp  canvas.h  drawline.cpp  drawline.h  lab_05.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
ComputerGraphics/lab_06/: canvas.cpp  canvas.h  drawline.cpp  drawline.h  lab_06.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  mycolors.h  mycursors.h
ComputerGraphics/lab_07/: canvas.cpp  canvas.h  colorbutton.h  drawline.cpp  fonts.qrc  lab_07.pro  mainwindow.ui
ComputerGraphics/lab_08/: canvas.cpp  canvas.h  lab_08.pro  mainwindow.h  mainwindow.ui
ComputerGraphics/lab_09/: canvas.cpp  canvas.h  colorbutton.cpp  drawline.h  lab_09.pro  mainwindow.cpp  mainwindow.ui
MDPL/LR02-19/: L2.LST  l2.asm
MDPL/LR03-19/: l3.asm
MDPL/LR0607-19/: BIN.ASM  DEC.ASM  HEX.ASM  MAIN.ASM  READ.ASM
MDPL/LR_08/: LR_08.sln
MDPL/LR_09/: lab_09.sln
MDPL/lab_10/: lab_10.sln
MDPL/lab_11/: lab_11.sln
MDPL/lab_12/: lab12.sln
OOP/lab_01/: .mainwindow.cpp.swp  .management.cpp.swp  .object.cpp.swp  check_entry.cpp  check_entry.h  displaywidget.cpp  displaywidget.h  exit.cpp  exit.h  geometry.cpp  geometry.h  handler.cpp  handler.h  io.cpp  io.h  lab_01.pro  line3d.cpp  line3d.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  management.cpp  management.h  mycolors.h  object.cpp  object.h  point3d.cpp  point3d.h  projection.cpp  projection.h
OOP/lab_02/: CMakeLists.txt
OOP/lab_03/: car.cpp  car.h  door.cpp  door.h  elevator.cpp  elevator.h  gbutton.cpp  gbutton.h  gcontrol.cpp  gcontrol.h  gelevator.cpp  gelevator.h  gindicator.cpp  gindicator.h  lab_03.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
OOP/lab_04/: CMakeLists.txt
OOP/lab_04/forms/: mainwindow.ui
OOP/lab_04/include/: BufferManager.h  Canvas.h  CanvasLine.h  Container.h  DrawObject.h  Edge3d.h  Exception.h  HashTable.h  IO.h  IOBase.h  IOFile.h  MainPresenter.h  MainView.h  MainViewContainer.h  MainViewEmitter.h  MainViewKeeper.h  MainViewObserver.h  MathConstants.h  Model.h  Pair.h  Point3d.h  Scene.h  WFMBuildManager.h  WFMBuilder.h  WFMBuilderBase.h  WFMExceptions.h  WFMExtracter.h  WFMIterator.h  WFMReader.h  WFMReaderBase.h  WFMWriter.h  WireFrameModel.h  mainwindow.h
OOP/lab_04/resources/icons/: icons.qrc
OOP/lab_04/resources/styles/: MyTheme.qss
OOP/lab_04/source/: BufferManager.cc  Canvas.cc  CanvasLine.cc  Edge3d.cc  Exception.cc  IO.cc  IOFile.cc  MainViewKeeper.cc  Point3d.cc  WFMBuildManager.cc  WFMBuilder.cc  WFMExtracter.cc  WFMReader.cc  WFMWriter.cc  WireFrameModel.cc  mainwindow.cc
OOP/lab_04/sources/: MainPresenter.cc  MainViewEmitter.cc  main.cc  mainwindow.cc
OOP/lab_05/: control_ch.drawio  dps_b.dot  dps_d.dot  dps_mp.dot  dps_n.dot  dps_p.dot  dps_t.dot  dsda.drawio  im.dot  mvo.dot  report.md
lab_01/: Makefile  fnabiev_lab01  ftable.out  ftablegen.py  main.cpp  myio.cpp  ninterp.cpp  ninterp.hpp  xtable.out
(+54 files in other folders)
